# the-blue-shirt-guy

./: .env.example  .gitattributes  .gitignore  Dockerfile  ENV_DESIGN.md  Hackathon.md  PROJECT.md  README.md  docker-compose.yml  inference.py  requirements.txt  reward_mechanism.md
agent/: env_http_client.py  research_agent.py  tool_executor.py
agent/tools/: execute_code.py  explain_error.py  fetch_docs.py  fetch_url.py  lint_code.py  run_tests.py  search_code_examples.py  web_search.py
envs/codeforge_env/: client.py  models.py  openenv.yaml  pyproject.toml
envs/codeforge_env/server/: app.py  codeforge_environment.py  rubric.py
envs/gen_env/: client.py  models.py  openenv.yaml  pyproject.toml  tool_registry.py
envs/gen_env/server/: app.py  gen_env_environment.py  rubric.py  tool_graders.py  tool_registry.py
scripts/: pre_validation.sh
tasks/: benchmark.json
tests/: test_tool_graders.py
training/: Genesis_Env_Training.ipynb  combined_loop.py  genesis-env-training.ipynb  genesis_training.ipynb  grpo_trainer.py  local_client.py  self-programing-output.txt  self_improve.ipynb  self_improve.py  tool_architect.py
